public/stylesheets/post_display.sass
@import 'base'

.content
  margin-left: 77px
  *margin-left: 75px
  width: 564px
  @include border-radius(15px)
  border: 1px solid #dcdcdc
  overflow: hidden

.content_head
  height: 50px

.content_body
  padding: 0px 25px
  font-size: 14px
  @include clear_fix

.content_footer
  padding-top: 20px
  @include single_line(40px)

  .tags
    height: 14px
    color: #888888
    font-size: 12px
    line-height: 14px
    position: relative
    bottom: -20px
    a
      color: #888888
      text-decoration: none
      &:hover
        text-decoration: underline
        color: #3f7be0

  .left
    float: left

  .middle
    margin-left: 200px
    margin-right: 100px


  .right
    float: right

  .middle,
  .left
    margin-top: 12px

.writer_name a
  color: $blue
  font-size: 14px

.update_time
  font-size: 10px
  font-family: Arial, Verdana
  color: #888888

.hidden
  display: none

.pics_multi .photos,
.photo_set .photos
  margin: 0
  padding: 0
  cursor: pointer
  @include clear_fix

  .photo
    float: left
    list-style: none
    margin-right: 6px
    padding: 0
    width: 128px
    height: 128px

    img
      width: 128px
      height: 128px

  .total_num
    color: $gray

.slide_holder
  position: relative
  width: 500px
  background: black

.slide_control
  position: absolute
  right: 0
  bottom: 0
  padding: 0 2px
  margin: 2px
  z-index: 30
  color: $almost-white
  @include bg-rgba(0, 0, 0, 0.5)
  -ms-filter= "progid:DXImageTransform.Microsoft.gradient(startColorStr=#7f000000,endColorStr=#7f000000)"
  filter= progid:DXImageTransform.Microsoft.gradient(startColorstr=#7f000000,endColorstr=#7f000000)
  zoom: 1
  @include border-radius(3px)

.slide_button
  float: left
  display: inline
  @include size($slide-button-size, $slide-button-size)
  background: transparent url(/images/slide_control.png) no-repeat
  @include hide_text
  line-height: $slide-button-size
  vertical-align: bottom
  margin: 1px 3px

.next
  background-position: -18px -18px

  &:hover
    background-position: -18px 0

.prev
  background-position: -54px -18px

  &:hover
    background-position: -54px 0

.show_thumb
  background-position: 0 -18px

  &:hover
    background-position: 0 0

.hide_thumb
  background-position: -36px -18px

  &:hover
    background-position: -36px 0

.play
  background-position: -72px -18px

  &:hover
    background-position: -72px 0

.pause
  background-position: -90px -18px

  &:hover
    background-position: -90px 0

.slide_playing .play,
.showing_thumblist .next,
.showing_thumblist .prev,
.showing_thumblist .play,
.showing_thumblist .pause,
.showing_thumblist .show_thumb,
.hide_thumb, .pause
  display: none

.showing_thumblist .hide_thumb,
.slide_playing .pause
  display: inline

.showing_thumblist .play,
.showing_thumblist .pause
  display: none

.thumblist
  vertical-align: bottom
  border: 2px white solid
  @include border-radius(8px)
  @include bg-rgba(0,0,0,0.8)
  -ms-filter= "progid:DXImageTransform.Microsoft.gradient(startColorStr=#cc000000,endColorStr=#cc000000)"
  filter= progid:DXImageTransform.Microsoft.gradient(startColorstr=#cc000000,endColorstr=#cc000000)
  zoom: 1
  padding: 10px
  width: 280px
  position: absolute
  z-index: 21

.slide_thumb_shim
  z-index: 20

.slide_item
  position: absolute
  z-index: 1

.slide_desc
  display: inline

.slide_desc_ph
  @include inline_block
  width: 102px

.slide_panel
  position: absolute
  bottom: 0
  left: 0
  padding: 0 4px
  line-height: 24px
  z-index: 20
  width: 492px
  color: #fff
  @include bg-rgba(0, 0, 0, 0.5)
  -ms-filter= "progid:DXImageTransform.Microsoft.gradient(startColorStr=#7f000000,endColorStr=#7f000000)"
  filter= progid:DXImageTransform.Microsoft.gradient(startColorstr=#7f000000,endColorstr=#7f000000)
  zoom: 1

.slide_thumb
  position: relative
  cursor: pointer
  float: left
  _display: inline
  margin: 5px
  height: 60px
  vertical-align: bottom

.video_thumb
  width: 128px
  heigh: 96px
  position: relative

.video_tar_open

.video_thumb_play
  cursor: pointer
  position: absolute
  top: 50%
  left: 50%
  margin: -16.5px 0 0 -16.5px
  width: 33px
  height: 33px
  opacity: 0.8
  background: transparent url(/images/post_video_play.gif) no-repeat

@mixin post_button
  @include size(16px, 16px)
  @include hide_text
  background-image: url('/images/post_btn.gif')
  background-repeat: no-repeat
  margin: 16px
  margin-right: 0
  float: right
  display: inline
  text-decoration: none

.post
  padding: 2px 18px

  .remove, .edit, .repost, .reply, .open, .fave, .faved
    @include post_button

  .open
    background-position: -80px 0

  .edit
    background-position: -40px 0

  .remove
    background-position: -60px 0

  .repost, .repost_icon
    background-position: -20px 0

  .reply
    text-indent: 0
    padding-left: 18px
    vertical-align: bottom
    line-height: 16px
    color: #676767
    text-decoration: none
    background-position: -100px 0

  .fave
    background-position: 0 0

  .faved
    background-position: 0 -80px

.article
  .remove, .edit, .open, .repost, .fave, .faved
    visibility: hidden

.hover
  .remove, .edit, .reply, .open, .repost, .fave, .faved
    visibility: visible

.post_single .open
  display: none


.chat
  width: auto
  margin:
    top: 16px
    bottom: 16px
  padding: 12px
  border: 1px solid #dcdcdc
  background: #f4f4f4
  
  *
    font-size: 14px

  span.c_date
    font-size: 12px
    color: #009a93
        
  .c_name
    a
      color: #009a93
      text-decoration: none
      
  .c_content
    width: 100%
    max-height: 390px
    overflow-y: auto
    overflow-x: hidden
    color: #1d1d1d
    padding: 0
    margin: 0

  .box
    margin: 0 0 12px 0
    height: auto

    div
      margin: 0 0 5px 0

.c_input
  @include border-radius(11px)
  border: 1px #d5e2ee solid
  height: 30px
  background-color: #009fff
  margin-top: 10px
  overflow: hidden
  
  form
    border: 0
    margin: 0
    padding: 0

  input
    width: 100%
    height: 30px
    border: 0
    padding: 0
    margin: 0
    line-height: 30px
    font-size: 18px
  
  .txt
    width: 469px
    background-color: white
    padding-top: 1px
    padding-left: 8px
    border-right: 1px solid black
    float: left

  .c_submitter
    width: 65px
    float: left

    input
      _line-height: 38px
      background-color: transparent
      color: #ffffff
      text-align: center
      cursor: pointer

.article
  position: relative
  @include clear_fix

  .post
    padding: 0

  .author_arrow
    background: url("/images/arrow1.gif") no-repeat
    position: absolute
    top: 32px
    left: 65px
    *left: 66px
    @include size(13px, 13px)

  .writer_name
    float: left
    @include single_line(50px)

  .avatar
    text-align: center

  .update_time
    font-size: 14px

  .repost_info
    color: #888

  .content
    padding: 2px 18px

  .chat
    margin: 0

.hover
  .author_arrow
    background-image: url("/images/arrow2.gif")
    border-right: 2px white solid
    left: 67px
    *left: 68px

  .content
    padding: 0 16px
    border:
      width: 3px
      color: #4a84f2

.post .chat_slim
  clear: both
  margin:
    top: 10px
    bottom: 10px
  line-height: 20px
  vertical-align: middle
  padding: 1px 10px 10px 10px
  border: 0
  position: relative
  @include border-radius(11px)

  .box
    border-bottom: 1px #e7e7e7 solid
    padding:
      top: 8px
      bottom: 7px
    margin-bottom: 0
    @include clear_fix

  .c_avatar
    float: left
    margin-top: 1px

  .c_body
    float: left
    width: 420px
    margin-left: 10px

  .txt
    border-right: none

  .c_name a
    color: $blue

.article
  [class="c_arrow"]
    position: absolute
    color: transparent
    border-top: 0
    border-left: 12px transparent solid
    border-right: 12px transparent solid
    border-bottom: 24px #f4f4f4 solid
    top: -14px
    right: 10px
    @include size(0px, 0px)

.article .expanded_album
  cursor: auto

  .photo
    float: none
    height: auto
    border: 0

    img
      height: auto
      width: auto

.post_stat
  @include clear_fix

  .favor_count,
  .repost_count
    @include clear_fix
    margin: 16px
    margin-right: 0
    float: right
    text-indent: 0
    vertical-align: bottom
    line-height: 16px
    color: #676767
    text-decoration: none

  .repost_icon,
  .favor_icon
    @include post_button
    visibility: visible
    float: left
    margin: 0
    margin-right: 2px

  .num
    float: left

